bug fixes on mobile

--- a/index.css
+++ b/index.css
@@ -1250,7 +1250,7 @@ button:hover span::after {
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: flex-start;
-	gap: var(--gap-5xl);
+	gap: var(--gap-base);
 }
 
 .vakanz-header {
@@ -1265,9 +1265,12 @@ button:hover span::after {
 	align-items: flex-start;
 	justify-content: flex-start;
 	gap: var(--gap-5xs);
+	padding: var(--gap-base) 0;
 }
-
-.card-vacancy-footer {
+.card-vacancy-body h2 {
+	margin: 8px 0;
+}
+.card-vacancy-footer { 
 	align-self: stretch;
 	display: flex;
 	flex-direction: column;
@@ -1277,6 +1280,7 @@ button:hover span::after {
 }
 .card-vacancy-footer p:first-child {
 	font-size: var(--font-size-xl);
+	font-weight: 500;
 }
 
 /* !SECTION: Jobs */
