--- a/media.css
+++ b/media.css
@@ -14,7 +14,7 @@
 	}
 	.back,
 	.card-pflege-info {
-		backdrop-filter: blur(0);
+		backdrop-filter: blur(5);
 	}
 	.back {
 		background: rgba(145, 145, 145, 0);
@@ -243,7 +243,7 @@
 	}
 	#jobs .popup {
 		width: 80vw;
-		height:90vh;
+		height:80vh;
 		overflow-y: scroll;
 	}
 	.contact-card-details,
@@ -296,7 +296,7 @@
 	.mobile-links-active {
 		width: 100%;
 		z-index: 999999;
-		position: sticky;
+		position: fixed;
 	}
 }
 
